Viewport (selection etc) not updated while rendering (F12) #57302

Closed
opened 2018-10-19 12:21:34 +02:00 by eric · 8 comments

macOS High Sierra 10.13.6
MacBook Pro (Retina, 15-inch, Mid 2015)
2.5 GHz Intel Core i7
16 GB 1600 MHz DDR3
AMD Radeon R9 M370X 2048 MB
Intel Iris Pro 1536 M

blender 2.80 alpha 2
c6eb5651ba

While rendering I am unable to choose objects and keep working,
something that was possible at 2.79.

macOS High Sierra 10.13.6 MacBook Pro (Retina, 15-inch, Mid 2015) 2.5 GHz Intel Core i7 16 GB 1600 MHz DDR3 AMD Radeon R9 M370X 2048 MB Intel Iris Pro 1536 M blender 2.80 alpha 2 c6eb5651ba2 While rendering I am unable to choose objects and keep working, something that was possible at 2.79.
Author

Added subscriber: @EricBu

Added subscriber: @EricBu
Member

Added subscribers: @fclem, @brecht, @lichtwerk

Added subscribers: @fclem, @brecht, @lichtwerk
Member

Cannot reproduce when using rendered viewport (both Eevee and Cycles)

However, when using F12, there seems to be an issue when updating.
Selection seems to change (e.g. HUD changes name), I can also transform objects, but selection outline as well as those transforms are only updated in the viewport when rendering is canceled.

Confirming for now, @fclem or @brecht might know if this is expected?

Cannot reproduce when using rendered viewport (both Eevee and Cycles) However, when using F12, there seems to be an issue when updating. Selection seems to change (e.g. HUD changes name), I can also transform objects, but selection outline as well as those transforms are only updated in the viewport when rendering is canceled. Confirming for now, @fclem or @brecht might know if this is expected?

It's not expected as far as I know. It indeed seems to be a 3D viewport drawing issue, in other places the objects do appears as selected.

It's not expected as far as I know. It indeed seems to be a 3D viewport drawing issue, in other places the objects do appears as selected.
Philipp Oeser changed title from Cannot choose objects while rendering to Viewport (selection etc) not updated while rendering (F12) 2018-10-19 14:03:08 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

I think it might be related to depsgraph since ob->base_flag is not updated. I think this is because the whole UI does not use the same depsgraph or read the source datablock directly.

@Sergey do you have a clue?

I think it might be related to depsgraph since ob->base_flag is not updated. I think this is because the whole UI does not use the same depsgraph or read the source datablock directly. @Sergey do you have a clue?
Sergey Sharybin was assigned by Philipp Oeser 2018-10-26 09:25:23 +02:00

This issue was referenced by 48f9e24f0c

This issue was referenced by 48f9e24f0c1e8ad97510a7a26a88c855be0ba6d7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57302
No description provided.